--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <!-- <load src="./partials/header.html" icon-path="img/sprite.svg#logo" /> -->
 
     <main>
       <!-- Loads the specified .html file -->
@@ -16,7 +16,7 @@
       <load src="./partials/reviews.html" />
     </main>
 
-    <load src="./partials/footer.html" />
+    <!-- <load src="./partials/footer.html" /> -->
 
     <script type="module" src="./main.js"></script>
   </body>
