--- a/src/index.html
+++ b/src/index.html
@@ -10,14 +10,14 @@
   <body>
     <!-- <load src="./partials/header.html" icon-path="img/sprite.svg#logo" /> -->
 
-    <main>
+    <main class="container">
       <!-- Loads the specified .html file -->
+      <load src="./partials/hero.html" />
       <load src="./partials/benefits.html" />
       <load src="./partials/reviews.html" />
     </main>
-
-    <!-- <load src="./partials/footer.html" /> -->
-
+    <load src="./partials/footer.html" />
     <script type="module" src="./main.js"></script>
+    <script type="module" src="./js/footer.js"></script>
   </body>
 </html>
